<resources>
    <string name="app_name">Real Time Astrology</string>
    <string name="button_label_Next">Next</string>
    <string name="button_label_NextPage">Next</string>
    <string name="button_label_Back">Back</string>
    <string name="button_label_Next_Page">Next</string>
    <string name="button_label_Back2">Back</string>
    <string name="astro_chart_reading">Astro Chart Reading</string>
    <string name="relationship_compatibility">Relationship Compatibility</string>
    <string name="careerpath">CareerPath</string>
    <string name="terri_guillemets">-- Terri Guillemets</string>
    <string name="astronomer_astrologer">“The astronomer has a starry map of the past, the astrologer, of our futures.”</string>
    <string name="stars_destiny">I will look on the stars and look on thee, and read the page of thy destiny.”</string>
    <string name="letitia_elizabeth_landon">-- Letitia Elizabeth Landon</string>
    <string name="button_label_Back3">Back</string>
    <string name="button_Next_Page_3">Next</string>
    <string name="button_label_submit">Submit</string>
    <string name="email">Email:</string>
    <string name="time_of_birth_apx">Time of Birth (apx.)</string>
    <string name="place_of_birth_country_city">Place of Birth Country / City</string>
    <string name="enter_your_date_of_birth_dd_mm_yyy">Enter your date of birth DD/MM/YYY</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="button_label_payment">Payment</string>
    <string name="welcome_to_journey_of_self_discovery">WELCOME TO JOURNEY OF SELF DISCOVERY</string>
    <string name="harry_waldauer">-- Harry Waldauer</string>

</resources>
