<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dna"
    tools:context=".MainActivity2">


    <Button
        android:id="@+id/buttonBack"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:text="@string/button_label_Back2"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonNextPage"
        app:layout_constraintEnd_toStartOf="@+id/buttonNextPage"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNextPage"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:text="@string/button_label_Next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBack" />

    <TextView
        android:id="@+id/textViewAstroQuote1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/astronomer_astrologer"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <TextView
        android:id="@+id/textViewTerriGuillemets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terri_guillemets"
        android:textColor="@color/White"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <CheckBox
        android:id="@+id/checkBoxAstroReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/astro_chart_reading"
        android:textColor="@color/White"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <CheckBox
        android:id="@+id/checkBoxRelationShipComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relationship_compatibility"
        android:textColor="@color/White"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <CheckBox
        android:id="@+id/checkBoxCareerPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/careerpath"
        android:textColor="@color/White"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />


</androidx.constraintlayout.widget.ConstraintLayout>